deploy/sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app: sample-pod
  ports:
    - name: sample-pod-port
      protocol: TCP
      port : 4000
      targetPort : 4000
      nodePort: 30080
  type : NodePort
