deploy/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost-testing
    http:
      paths:
      - path: /
        pathType : Prefix
        backend:
          service:
            name: sample-service
            port:
              number: 4000
